--- a/tcc-transaction-tutorial-sample/tcc-transaction-http-sample/tcc-transaction-http-order/src/main/webapp/WEB-INF/web.xml
+++ b/tcc-transaction-tutorial-sample/tcc-transaction-http-sample/tcc-transaction-http-order/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,11 @@
         <param-name>log4jRefreshInterval</param-name>
         <param-value>60000</param-value>
     </context-param>
+    
+    <context-param>
+		<param-name>webAppRootKey</param-name>
+		<param-value>webApp.order.root</param-value>
+	</context-param>
 
     <listener>
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
