--- a/tcc-transaction-tutorial-sample/tcc-transaction-http-sample/tcc-transaction-http-redpacket/src/main/webapp/WEB-INF/web.xml
+++ b/tcc-transaction-tutorial-sample/tcc-transaction-http-sample/tcc-transaction-http-redpacket/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,11 @@
         <param-name>log4jRefreshInterval</param-name>
         <param-value>60000</param-value>
     </context-param>
+    
+    <context-param>
+		<param-name>webAppRootKey</param-name>
+		<param-value>webApp.redpacket.root</param-value>
+	</context-param>
 
     <listener>
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
