--- a/tcc-transaction-tutorial-sample/tcc-transaction-server-sample/src/main/config/dev/tcc-transaction-server-sample.properties
+++ b/tcc-transaction-tutorial-sample/tcc-transaction-server-sample/src/main/config/dev/tcc-transaction-server-sample.properties
@@ -1,7 +1,6 @@
 jdbc.url=jdbc:mysql://127.0.0.1:3306/TCC?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=
-
+jdbc.password=chenfeng
 
 tcc.redis.host=127.0.0.1
 tcc.redis.port=6379
