--- a/tcc-transaction-tutorial-sample/tcc-transaction-server-sample/src/main/config/test/tcc-transaction-server-sample.properties
+++ b/tcc-transaction-tutorial-sample/tcc-transaction-server-sample/src/main/config/test/tcc-transaction-server-sample.properties
@@ -1,11 +1,7 @@
 tcc_domain=
 jdbc.url=jdbc:mysql://127.0.0.1:3306/TCC?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=
-
-
-
-
+jdbc.password=chenfeng
 
 tcc.redis.host=192.168.3.220
 tcc.redis.port = 6379
@@ -17,6 +13,3 @@ tcc.redis.pool.maxTotal=300
 tcc.redis.pool.maxIdle=100
 tcc.redis.pool.minIdle=10
 tcc.redis.pool.maxWaitMillis=3000
-
-
-
